# etabli

./: .gitignore  LICENSE  emacs-server-handler.py  emacsServerHandler.py  etabli.py  etabliConfig.py  etabliLib.py  etabliOrg.py  etabli_config.toml  prepare.py  pyproject.toml  readme.org  waybar_daemon.py  workspace_commands.py  workspaces.py
etabli/: __init__.py  daemons.py  etabli.py  utils.py
etabli/scripts/: board.py  dmenu.py  etabli.py  prepare.py  waybar.py
rofi/: readme.org  rofi-container-level  rofi-container-new-level  rofi-set-level-directory  rofi-window-find  rofi-workspace-rename  rofi-workspace-send  rofi-workspace-switch
themes/: dark.toml
